# temporal-experiments

./: .gitignore  Makefile  QUICKSTART.md  README.md  TEMPORAL_KEDA_SCALER.md  kind-config.yaml  pyproject.toml  requirements.txt  trigger_workflow.py
activities/: __init__.py  api_activities.py  cv_activities.py  ml_activities.py  storage_activities.py
docker/: Dockerfile.api  Dockerfile.cv  Dockerfile.ml  Dockerfile.workflow
k8s/: 00-namespace.yaml  01-temporal.yaml  02-workflow-worker.yaml  03-api-worker.yaml  04-cv-worker.yaml  05-ml-worker.yaml  06-keda-scaledobjects.yaml  07-temporal-ingress.yaml
scripts/: trigger_from_cluster.py  trigger_n_workflows.py  trigger_workflow.py
workers/: api_worker.py  cv_worker.py  ml_worker.py  workflow_worker.py
workflows/: dataset_workflow.py
